--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,14 +1,15 @@
 [toolchain]
+anchor_version = "0.31.1"
 
 [features]
 seeds = false
 skip-lint = false
 
 [programs.localnet]
-pumpnotdump = "PNDFunAntiRugLaunchpadV1111111111111111111"
+pumpnotdump = "D5HsjjMSrCJyEF1aUuionRsx7MXfKEFWtmSnAN3cQBvB"
 
 [programs.devnet]
-pumpnotdump = "PNDFunAntiRugLaunchpadV1111111111111111111"
+pumpnotdump = "D5HsjjMSrCJyEF1aUuionRsx7MXfKEFWtmSnAN3cQBvB"
 
 [registry]
 url = "https://api.apr.dev"
